# dgproto

./: CMakeLists.txt  Doxyfile  README.md  ServerJob
doc/: report.lyx
include/: common.h  protocol.h  utils.h
keys/: A.pem  A.pub.pem  B.pub.pem  client.pem  client.pub.pem  iv  server.pem  server.pub.pem
src/: client.c  protocol.c  server.c  utils.c
test/: gen_dialog.sh  proto_tests.c  test_connection.sh  util_tests.c
